Add Array to List Test